tests/errors/duplicate_param.ki
var f = Function(a, b, a):
    return a
